[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "radiotools"
description = "Tools for radio astronomy."
readme = "README.rst"
authors = [
    { name = "radionets-project developers" }
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 3 - Alpha",
]

dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
    "astropy >=6.1.0",
    "matplotlib ~=3.0",
    "numpy ~=1.16",
    "pandas >=2.0",
    "rich >=13.0",
    "casatools ~=6.6",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "setuptools_scm[toml]",
]

all = [
    "radiotools[dev]"
]

[project.urls]
repository = "https://github.com/radionets-project/radiotools"

[project.scripts]
radiotools-info = "radiotools.info:main"
radiotools-vis = "radiotools.cli_tools.vis:main"

[tool.setuptools_scm]
write_to = "radiotools/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = [
    "radiotools",
]

[tool.towncrier]
    package = "radiotools"
    directory = "docs/changes"
    filename = "CHANGES.rst"
    template = "docs/changes/template.rst"

    # let towncrier create proper links to the merged PR
    issue_format = "`#{issue} <https://github.com/cta-observatory/ctapipe/pull/{issue}>`__"

    [tool.towncrier.fragment.feature]
        name = "New Features"
        showcontent = true

    [tool.towncrier.fragment.bugfix]
        name = "Bug Fixes"
        showcontent = true

    [tool.towncrier.fragment.api]
        name = "API Changes"
        showcontent = true

    [tool.towncrier.fragment.optimization]
        name = "Refactoring and Optimization"
        showcontent = true

    [tool.towncrier.fragment.maintenance]
        name = "Maintenance"
        showcontent = true

    [[tool.towncrier.section]]
        name = ""
        path = ""
