[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "radiotools"
description = "Tools for radio astronomy."
readme = "README.rst"
authors = [
    { name = "radionets-project developers" }
]
maintainers = [
  { name = "Anno Knierim", email = "anno.knierim@tu-dortmund.de" },
  { name = "Tom Groß", email = "tom.gross@tu-dortmund.de" },
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 3 - Alpha",
]

dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
    "astropy >=6.1.0",
    "matplotlib ~=3.0",
    "numpy ~=1.16",
    "pandas >=2.0",
    "rich >=13.0",
    "casatools ~=6.6",
    "requests",
    "bs4",
]

[dependency-groups]
dev = [
    "pre-commit",
    "setuptools_scm[toml]",
    "towncrier",
    {include-group = "docs"}
]

docs = [
  "graphviz",
  "ipython",
  "jupyter",
  "nbsphinx",
  "notebook",
  "numpydoc",
  "pandas",
  "pydata_sphinx_theme",
  "pypandoc",
  "sphinx",
  "sphinx-design",
  "sphinx_automodapi",
  "sphinxcontrib-bibtex",
  "tomli; python_version < '3.11'",
]

[project.urls]
repository = "https://github.com/radionets-project/radiotools"

[project.scripts]
radiotools-info = "radiotools.info:main"
radiotools-vis = "radiotools.cli_tools.vis:main"

[tool.setuptools_scm]
write_to = "radiotools/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = [
    "radiotools",
]

[tool.coverage.run]
branch = true
omit = [
  "radiotools/_version.py"
]

[tool.towncrier]
    package = "radiotools"
    directory = "docs/changes"
    filename = "CHANGES.rst"
    template = "docs/changes/template.rst"

    # let towncrier create proper links to the merged PR
    issue_format = "`#{issue} <https://github.com/radionets-project/radiotools/pull/{issue}>`__"

    [tool.towncrier.fragment.feature]
        name = "New Features"
        showcontent = true

    [tool.towncrier.fragment.bugfix]
        name = "Bug Fixes"
        showcontent = true

    [tool.towncrier.fragment.api]
        name = "API Changes"
        showcontent = true

    [tool.towncrier.fragment.optimization]
        name = "Refactoring and Optimization"
        showcontent = true

    [tool.towncrier.fragment.maintenance]
        name = "Maintenance"
        showcontent = true

    [[tool.towncrier.section]]
        name = ""
        path = ""
